app/cartographers-table-window/index.css
.code-decorator {
  padding: 1px 5px;
  margin: -1px 0;
  border: 0px;
  border-radius: 6px;
  user-select: none;
}

/* Tooltip container */
.tooltip-holder {
  position: relative;
}

/* Tooltip text */
.tooltip {
  visibility: hidden;
  text-align: center;
  padding: 5px;
  border-radius: 6px;

  position: absolute;
  margin-left: 10px;
  top: -5px;
  z-index: 1;
}

.tooltip {
  background-color: rgba(0,0,0,0.8);
  color: #fff;
}

/* Show the tooltip text when you mouse over the tooltip container */
.tooltip-holder:hover .tooltip {
  visibility: visible;
}

.banner-button {
  display: inline;
}

.banner-button button {
  padding: 0;
  border: 0;
  background-color: rgba(0,0,0,0);
  outline-color: white;
}

.banner-button img {
  padding: 0;
}

.banner-divider {
  display: inline;
  padding: 0.4rem;
}

::-webkit-scrollbar {
  width: 12px;
  height: 12px;
}
::-webkit-scrollbar-button {
  width: 0px;
  height: 0px;
}
::-webkit-scrollbar-thumb {
  background: #291B21;
  border: 0px none #ffffff;
  border-radius: 50px;
}
::-webkit-scrollbar-thumb:hover {
  background: #291B21;
}
::-webkit-scrollbar-thumb:active {
  background: #291B21;
}
::-webkit-scrollbar-track {
  background: #3F2933;
  border: 0px none #ffffff;
  border-radius: 50px;
}
::-webkit-scrollbar-track:hover {
  background: #3F2933;
}
::-webkit-scrollbar-track:active {
  background: #3F2933;
}
::-webkit-scrollbar-corner {
  background: transparent;
}

